--- a/0actor/cube/cubestyle.css
+++ b/0actor/cube/cubestyle.css
@@ -1,16 +1,21 @@
-html {
-    background: url("http://dimg02.c-ctrip.com/images/fd/tg/g6/M06/FE/62/CggYs1bK4JeABPWpAAFepbgyKxU576.jpg");
-    background-size: 100%,100%;
-}
 
+body {
+    background: url("http://dimg02.c-ctrip.com/images/fd/tg/g6/M06/FE/62/CggYs1bK4JeABPWpAAFepbgyKxU576.jpg");
+    background-size: 100% 600px;
+}
+/*立方体样式开始*/
 /*最外层容器样式*/
-.wrap{
-	width: 650px;
-	height: 200px;
-	/*改变左右上下,图片方块移动*/
-	margin: 150px 360px;
-	position: relative;
-	
+.pic_cube {
+    width: 600px;
+    height: 400px;
+    margin-top: 200px;
+}
+.wrap {
+    width: 600px;
+    height: 400px;
+    /*改变左右上下,图片方块移动*/
+    margin:0;
+  
 }
 /*包裹所有容器样式*/
 .cube{
@@ -59,7 +64,7 @@ html {
 }
 /*定义小正方体样式*/
 .cube span{
-	display: bloack;
+	display: block;
 	width: 100px;
 	height: 100px;
 	position: absolute;
@@ -106,4 +111,11 @@ html {
 }
 .cube:hover .out_bottom{
 	transform: rotateX(-90deg) translateZ(200px);
+}
+/*立方体样式结束*/
+
+/* 弹幕样式*/
+.danmu_main{
+    width:600px;
+    height:600px;
 }
