--- a/rings/rings2css.css
+++ b/rings/rings2css.css
@@ -55,11 +55,7 @@ h1 {
     margin-top: 350px;
     color: rgba(255,255,255,1);
 }
-.author_year {
-    text-align: center;
-    padding-top: 350px;
-    color: rgba(255,255,255,1);
-}
+
 .pic_0 {
     position: relative;
     top: 25%;
@@ -102,13 +98,14 @@ h1 {
     height: 240px;
     margin: 0 auto;
 }
+
 .pic_3 {
-    background: url("https://wx1.sinaimg.cn/mw690/95c4147fgy1fubd88rj4tj205k06ojt4.jpg"); 
+    background: url("https://wx3.sinaimg.cn/mw690/95c4147fgy1fubd88rvd3j205k06ojsl.jpg");
 }
 
 
 .pic_4 {
-    background: url("https://wx3.sinaimg.cn/mw690/95c4147fgy1fubd88rvd3j205k06ojsl.jpg" );
+    background: url("https://wx1.sinaimg.cn/mw690/95c4147fgy1fubd88rj4tj205k06ojt4.jpg" );
 }
 
 .pic_5 {
@@ -118,8 +115,7 @@ h1 {
 
 
 .but {
-   
-    margin: 0 auto;
+    margin: 30px auto;
     text-align: center; 
 }
 
@@ -127,14 +123,14 @@ h1 {
 .part3 {
     margin-top: 20px;
     width: 90%;
-    height: 580px;
+    height: 560px;
     margin: 0 auto;
     background-color:rgba(255,255,255,0.1);
 }
 .book {
     width: 33%;
     height: 560px;
-    padding-left:20px;
+    padding:30px;
     display:inline;
     float:left;
 }
