--- a/rings/rings2css.css
+++ b/rings/rings2css.css
@@ -35,9 +35,10 @@ h1 {
 .author_text {
     width: 50%;
     height: 400px;
-    padding:10px;
+    padding: 10px;
     display: inline;
     float: left;
+    text-align: justify;
 }
 
 .author_img {
@@ -133,6 +134,7 @@ h1 {
     padding:30px;
     display:inline;
     float:left;
+    text-align:justify;
 }
 
 
